improved the results tab

--- a/169786.html
+++ b/169786.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title></title>
     <link rel="stylesheet" href="css/foundation.min.css"/>
+    <title>BGSS</title>
   </head>
   <body>
     <div class="top-bar">
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <!-- tab for results -->
+      <!-- tab for the results -->
       <div class="tabs-panel" id="results">
         <table>
           <thead>
@@ -103,16 +103,20 @@
             <!-- dynamic -->
           </tbody>
         </table>
-        <p>&nbsp;</p>
-        <p lang="en"><i>Tie breaker</i>:
-          number of workers, mechs and structures then power then popularity then
-          number of resources then number of territories then number of stars.
-        </p>
-        <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
-          nombre d'ouvriers, mechs et b&acirc;timents puis puissance puis
-          popularit&eacute; puis nombre de ressources puis nombre de
-          territoires puis nombre d'&eacute;toiles.
-        </p>
+        <!-- tie breaker information -->
+        <div id="tie">
+          <p lang="en"><i>Tie breaker</i>:
+            number of workers, mechs and structures then power then popularity then
+            number of resources then number of territories then number of stars.
+          </p>
+          <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
+            nombre d'ouvriers, mechs et b&acirc;timents puis puissance puis
+            popularit&eacute; puis nombre de ressources puis nombre de
+            territoires puis nombre d'&eacute;toiles.
+          </p>
+        </div>
+        <!-- date information -->
+        <i><div class="text-center" id="date"></div></i>
       </div>
     </div>
     <!-- JavaScript -->
