--- a/185343.html
+++ b/185343.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title></title>
     <link rel="stylesheet" href="css/foundation.min.css"/>
+    <title>BGSS</title>
   </head>
   <body>
     <div class="top-bar">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-      <!-- tab for results -->
+      <!-- tab for the results -->
       <div class="tabs-panel" id="results">
         <table>
           <thead>
@@ -198,13 +198,17 @@
             <!-- dynamic -->
           </tbody>
         </table>
-        <p>&nbsp;</p>
-        <p lang="en"><i>Tie breaker</i>:
-          water then resources.
-        </p>
-        <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
-          eau puis ressources.
-        </p>
+        <!-- tie breaker information -->
+        <div id="tie">
+          <p lang="en"><i>Tie breaker</i>:
+            water then resources.
+          </p>
+          <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
+            eau puis ressources.
+          </p>
+        </div>
+        <!-- date information -->
+        <i><div class="text-center" id="date"></div></i>
       </div>
     </div>
     <!-- JavaScript -->
