--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </div>
       <!-- player 1 name -->
-      <div class="grid-x grid-padding-x" id="player1" style="display: none">
+      <div class="grid-x grid-padding-x" id="div1" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player1" class="text-right middle">Player 1</label>
           <label lang="fr" for="player1" class="text-right middle">Joueur 1</label>
@@ -72,7 +72,7 @@
         </div>
       </div>
       <!-- player 2 name -->
-      <div class="grid-x grid-padding-x" id="player2" style="display: none">
+      <div class="grid-x grid-padding-x" id="div2" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player2" class="text-right middle">Player 2</label>
           <label lang="fr" for="player2" class="text-right middle">Joueur 2</label>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <!-- player 3 name -->
-      <div class="grid-x grid-padding-x" id="player3" style="display: none">
+      <div class="grid-x grid-padding-x" id="div3" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player3" class="text-right middle">Player 3</label>
           <label lang="fr" for="player3" class="text-right middle">Joueur 3</label>
@@ -92,7 +92,7 @@
         </div>
       </div>
       <!-- player 4 name -->
-      <div class="grid-x grid-padding-x" id="player4" style="display: none">
+      <div class="grid-x grid-padding-x" id="div4" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player4" class="text-right middle">Player 4</label>
           <label lang="fr" for="player4" class="text-right middle">Joueur 4</label>
@@ -102,7 +102,7 @@
         </div>
       </div>
       <!-- player 5 name -->
-      <div class="grid-x grid-padding-x" id="player5" style="display: none">
+      <div class="grid-x grid-padding-x" id="div5" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player5" class="text-right middle">Player 5</label>
           <label lang="fr" for="player5" class="text-right middle">Joueur 5</label>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <!-- player 6 name -->
-      <div class="grid-x grid-padding-x" id="player6" style="display: none">
+      <div class="grid-x grid-padding-x" id="div6" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player6" class="text-right middle">Player 6</label>
           <label lang="fr" for="player6" class="text-right middle">Joueur 6</label>
@@ -122,7 +122,7 @@
         </div>
       </div>
       <!-- player 7 name -->
-      <div class="grid-x grid-padding-x" id="player7" style="display: none">
+      <div class="grid-x grid-padding-x" id="div7" style="display: none">
         <div class="small-3 cell">
           <label lang="en" for="player7" class="text-right middle">Player 7</label>
           <label lang="fr" for="player7" class="text-right middle">Joueur 7</label>
