finished Clans of Caledonia

--- a/216132.html
+++ b/216132.html
@@ -26,7 +26,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="glory" class="text-right middle">Glory Track</label>
-              <label lang="fr" for="glory" class="text-right middle">FIXME</label>
+              <label lang="fr" for="glory" class="text-right middle">Piste de gloire</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="glory" min="0">
@@ -36,7 +36,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="basic" class="text-right middle">Number of Basic Goods</label>
-              <label lang="fr" for="basic" class="text-right middle">Nombre de FIXME</label>
+              <label lang="fr" for="basic" class="text-right middle">Nombre de marchandises de base</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="basic" min="0">
@@ -46,7 +46,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="processed" class="text-right middle">Number of Processed Goods</label>
-              <label lang="fr" for="processed" class="text-right middle">Nombre de FIXME</label>
+              <label lang="fr" for="processed" class="text-right middle">Nombre de produits transform&eacute;s</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="processed" min="0">
@@ -62,51 +62,57 @@
               <input type="number" id="money" min="0">
             </div>
           </div>
-          <!-- number of hops -->
-          <div class="grid-x grid-padding-x">
-            <div class="small-9 cell">
-              <label lang="en" for="hops" class="text-right middle">Number of Hops</label>
-              <label lang="fr" for="hops" class="text-right middle">Nombre de houblon</label>
+          <!-- imported goods -->
+          <div class="small secondary callout text-center">
+            <span lang="en">Imported Goods</span>
+            <span lang="fr">Marchandises import&eacute;es</span>
+            <p>&nbsp;</p>
+            <!-- number of hops -->
+            <div class="grid-x grid-padding-x">
+              <div class="small-9 cell">
+                <label lang="en" for="hops" class="text-right middle">Number of Hops</label>
+                <label lang="fr" for="hops" class="text-right middle">Nombre de houblon</label>
+              </div>
+              <div class="small-3 cell">
+                <input type="number" id="hops" min="0">
+              </div>
             </div>
-            <div class="small-3 cell">
-              <input type="number" id="hops" min="0">
+            <!-- number of cotton -->
+            <div class="grid-x grid-padding-x">
+              <div class="small-9 cell">
+                <label lang="en" for="cotton" class="text-right middle">Number of Cotton</label>
+                <label lang="fr" for="cotton" class="text-right middle">Nombre de coton</label>
+              </div>
+              <div class="small-3 cell">
+                <input type="number" id="cotton" min="0">
+              </div>
             </div>
-          </div>
-          <!-- number of cotton -->
-          <div class="grid-x grid-padding-x">
-            <div class="small-9 cell">
-              <label lang="en" for="cotton" class="text-right middle">Number of Cotton</label>
-              <label lang="fr" for="cotton" class="text-right middle">Nombre de coton</label>
+            <!-- number of tobacco -->
+            <div class="grid-x grid-padding-x">
+              <div class="small-9 cell">
+                <label lang="en" for="tobacco" class="text-right middle">Number of Tobacco</label>
+                <label lang="fr" for="tobacco" class="text-right middle">Nombre de tabac</label>
+              </div>
+              <div class="small-3 cell">
+                <input type="number" id="tobacco" min="0">
+              </div>
             </div>
-            <div class="small-3 cell">
-              <input type="number" id="cotton" min="0">
-            </div>
-          </div>
-          <!-- number of tobacco -->
-          <div class="grid-x grid-padding-x">
-            <div class="small-9 cell">
-              <label lang="en" for="tobacco" class="text-right middle">Number of Tobacco</label>
-              <label lang="fr" for="tobacco" class="text-right middle">Nombre de tabac</label>
-            </div>
-            <div class="small-3 cell">
-              <input type="number" id="tobacco" min="0">
-            </div>
-          </div>
-          <!-- number of sugar cane -->
-          <div class="grid-x grid-padding-x">
-            <div class="small-9 cell">
-              <label lang="en" for="sugar" class="text-right middle">Number of Sugar Cane</label>
-              <label lang="fr" for="sugar" class="text-right middle">Nombre de canne &agrave; sucre</label>
-            </div>
-            <div class="small-3 cell">
-              <input type="number" id="sugar" min="0">
+            <!-- number of sugar cane -->
+            <div class="grid-x grid-padding-x">
+              <div class="small-9 cell">
+                <label lang="en" for="sugar" class="text-right middle">Number of Sugar Cane</label>
+                <label lang="fr" for="sugar" class="text-right middle">Nombre de canne &agrave; sucre</label>
+              </div>
+              <div class="small-3 cell">
+                <input type="number" id="sugar" min="0">
+              </div>
             </div>
           </div>
           <!-- number of export contracts -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="contracts" class="text-right middle">Number of Export Contracts</label>
-              <label lang="fr" for="contracts" class="text-right middle">Nombre de contrats d'export</label>
+              <label lang="fr" for="contracts" class="text-right middle">Nombre de contrats d'exportation</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="contracts" min="0">
@@ -115,8 +121,8 @@
           <!-- number of settlements -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="settlements" class="text-right middle">Number of Settlements</label>
-              <label lang="fr" for="settlements" class="text-right middle">Nombre de FIXME</label>
+              <label lang="en" for="settlements" class="text-right middle">Number of Settlements (within reach)</label>
+              <label lang="fr" for="settlements" class="text-right middle">Nombre de colonies (&agrave; port&eacute;e)</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="settlements" min="0">
