--- a/216132.html
+++ b/216132.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/foundation.min.css"/>
+    <link rel="stylesheet" href="css/bgss.min.css"/>
     <title>BGSS</title>
   </head>
   <body>
