--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="keywords" content="bgss,board,boardgame,game,score,sheet,results,winner,tie,victory,points"/>
     <meta name="identifier-url" content="https://corlio.github.io/bgss/"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-    <title>BGSS</title>
     <link rel="stylesheet" href="css/foundation.min.css"/>
+    <link rel="stylesheet" href="css/bgss.min.css"/>
+    <title>BGSS</title>
   </head>
   <body>
     <div class="top-bar">
