7 Wonders: removed cap on science

--- a/68448.html
+++ b/68448.html
@@ -97,7 +97,7 @@
                 <label lang="fr" for="tablets" class="text-right middle">Nombre de tablettes</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="tablets" min="0" max="4">
+                <input type="number" id="tablets" min="0">
               </div>
             </div>
             <!-- scientific (compasses) -->
@@ -107,7 +107,7 @@
                 <label lang="fr" for="compasses" class="text-right middle">Nombre de compas</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="compasses" min="0" max="4">
+                <input type="number" id="compasses" min="0">
               </div>
             </div>
             <!-- scientific (gears) -->
@@ -117,7 +117,7 @@
                 <label lang="fr" for="gears" class="text-right middle">Nombre d'engrenages</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="gears" min="0" max="4">
+                <input type="number" id="gears" min="0">
               </div>
             </div>
             <!-- scientific (wild) -->
@@ -127,7 +127,7 @@
                 <label lang="fr" for="wild" class="text-right middle">Nombre de jokers</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="wild" min="0" max="2">
+                <input type="number" id="wild" min="0" max="3">
               </div>
             </div>
           </div>
