Scythe: added malus (Fenris)

--- a/00169786.html
+++ b/00169786.html
@@ -83,6 +83,16 @@
               <input type="number" id="bonus" min="0">
             </div>
           </div>
+          <!-- generic malus -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="malus" class="text-right middle">Malus VPs</label>
+              <label lang="fr" for="malus" class="text-right middle">PV de malus</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="malus" min="0">
+            </div>
+          </div>
         </div>
       </div>
       <!-- tab for the results -->
