--- a/00258389.html
+++ b/00258389.html
@@ -11,12 +11,15 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" style="margin-right: 1em" href="."></a><span id="title"><!-- dynamic --></span>
+        <ul class="menu">
+          <li><a href=".">&#8962;</a></li>
+          <li class="top-bar-title" id="title"><!-- dynamic --></li>
+        </ul>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
-      <!-- dynamic -->
       <li class="tabs-title"><a href="#options">?</a></li>
+      <!-- dynamic -->
       <li class="tabs-title"><a href="#results">=</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
