--- a/00185343.html
+++ b/00185343.html
@@ -11,7 +11,10 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" style="margin-right: 1em" href="."></a><span id="title"><!-- dynamic --></span>
+        <ul class="menu">
+          <li><a href=".">&#8962;</a></li>
+          <li class="top-bar-title" id="title"><!-- dynamic --></li>
+        </ul>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
