added French translation for Cooper Island

--- a/00269511.html
+++ b/00269511.html
@@ -30,7 +30,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="books" class="text-right middle">Number of log books</label>
-              <label lang="fr" for="books" class="text-right middle">???</label>
+              <label lang="fr" for="books" class="text-right middle">Nombre de carnets</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="books" min="0">
@@ -40,7 +40,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="ship1" class="text-right middle">Extra ship steps (one sail)</label>
-              <label lang="fr" for="ship1" class="text-right middle">???</label>
+              <label lang="fr" for="ship1" class="text-right middle">Navigation suppl&eacute;mentaires (une voile)</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="ship1" min="0" max="4">
@@ -50,7 +50,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="ship2" class="text-right middle">Extra ship steps (two sails)</label>
-              <label lang="fr" for="ship2" class="text-right middle">???</label>
+              <label lang="fr" for="ship2" class="text-right middle">Navigation suppl&eacute;mentaires (deux voiles)</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="ship2" min="0" max="4">
@@ -60,7 +60,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="anchors" class="text-right middle">Number of anchors</label>
-              <label lang="fr" for="anchors" class="text-right middle">???</label>
+              <label lang="fr" for="anchors" class="text-right middle">Nombre d'ancres</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="anchors" min="0">
@@ -70,7 +70,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="royal" class="text-right middle">Royal order VPs</label>
-              <label lang="fr" for="royal" class="text-right middle">???</label>
+              <label lang="fr" for="royal" class="text-right middle">PV des ordres royaux</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="royal" min="0">
@@ -80,7 +80,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="building" class="text-right middle">Building VPs</label>
-              <label lang="fr" for="building" class="text-right middle">???</label>
+              <label lang="fr" for="building" class="text-right middle">PV des b&acirc;timents</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="building" min="0">
@@ -89,8 +89,8 @@
           <!-- number of coins in the storage area -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="coins" class="text-right middle">Number of coins in storage</label>
-              <label lang="fr" for="coins" class="text-right middle">???</label>
+              <label lang="en" for="coins" class="text-right middle">Number of coins (storage)</label>
+              <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces (entrep&ocirc;t)</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="coins" min="0">
@@ -99,8 +99,8 @@
           <!-- number of resources in the storage area -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="resources" class="text-right middle">Number of resources in storage</label>
-              <label lang="fr" for="resources" class="text-right middle">???</label>
+              <label lang="en" for="resources" class="text-right middle">Number of resources (storage)</label>
+              <label lang="fr" for="resources" class="text-right middle">Nombre de ressources (entrep&ocirc;t)</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="resources" min="0">
@@ -109,8 +109,8 @@
           <!-- number of steps on the cartographer track -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="cartographer" class="text-right middle">Number of cartographer steps</label>
-              <label lang="fr" for="cartographer" class="text-right middle">???</label>
+              <label lang="en" for="cartographer" class="text-right middle">Unused cartographer steps</label>
+              <label lang="fr" for="cartographer" class="text-right middle">Points de cartographie inutilis&eacute;s</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="cartographer" min="0">
@@ -119,8 +119,8 @@
           <!-- number of double landscape tiles in reserve -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="landscape" class="text-right middle">Number of double landscape tiles in reserve</label>
-              <label lang="fr" for="landscape" class="text-right middle">???</label>
+              <label lang="en" for="landscape" class="text-right middle">Unused double landscape tiles</label>
+              <label lang="fr" for="landscape" class="text-right middle">Tuiles paysage doubles inutilis&eacute;es</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="landscape" min="0">
@@ -153,7 +153,7 @@
             least number of uncharted spaces.
           </p>
           <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
-            ???
+            le moins d'espaces non cartographiés.
           </p>
         </div>
         <!-- date information -->
