--- a/00269511.html
+++ b/00269511.html
@@ -40,7 +40,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="ship1" class="text-right middle">Extra ship steps (one sail)</label>
-              <label lang="fr" for="ship1" class="text-right middle">Navigation suppl&eacute;mentaires (une voile)</label>
+              <label lang="fr" for="ship1" class="text-right middle">Avance du bateau &agrave; une voile</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="ship1" min="0" max="4">
@@ -50,7 +50,7 @@
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
               <label lang="en" for="ship2" class="text-right middle">Extra ship steps (two sails)</label>
-              <label lang="fr" for="ship2" class="text-right middle">Navigation suppl&eacute;mentaires (deux voiles)</label>
+              <label lang="fr" for="ship2" class="text-right middle">Avance du bateau &agrave; deux voiles</label>
             </div>
             <div class="small-3 cell">
               <input type="number" id="ship2" min="0" max="4">
