--- a/index.html
+++ b/index.html
@@ -1,77 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="corlio"/>
     <meta name="description" content="BoardGame Score Sheet (BGSS)"/>
     <meta name="keywords" content="bgss,board,boardgame,game,score,sheet,results,winner,tie,victory,points"/>
     <meta name="identifier-url" content="https://corlio.github.io/bgss/"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="css/foundation.min.css"/>
-    <link rel="stylesheet" href="css/bgss.min.css"/>
     <title>BGSS</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/bgss.css"/>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/lcng.js"></script>
+    <script src="js/bgss.js"></script>
     <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", function () {
-        if ("serviceWorker" in navigator)
-          navigator.serviceWorker.register("swac.js");
+      $.GAMES = {"00000050":{"name":{"en":"Lost Cities","fr":"Les Cités Perdues"},"players":{"max":2,"min":2}},"00031260":{"name":{"en":"Agricola","fr":"Agricola"},"players":{"max":5,"min":1}},"00068448":{"name":{"en":"7 Wonders","fr":"7 Wonders"},"players":{"max":7,"min":2}},"00124361":{"name":{"en":"Concordia","fr":"Concordia"},"players":{"max":5,"min":2}},"00164928":{"name":{"en":"Orléans","fr":"Orléans"},"players":{"max":5,"min":2}},"00169786":{"name":{"en":"Scythe","fr":"Scythe"},"players":{"max":7,"min":1}},"00185343":{"name":{"en":"Anachrony","fr":"Anachrony"},"players":{"max":4,"min":1}},"00193738":{"name":{"en":"Great Western Trail","fr":"Great Western"},"players":{"max":4,"min":2}},"00215471":{"name":{"en":"Wind the Film!","fr":"Photograph"},"players":{"max":4,"min":2}},"00216132":{"name":{"en":"Clans of Caledonia","fr":"Clans of Caledonia"},"players":{"max":4,"min":1}},"00227224":{"name":{"en":"The Red Cathedral","fr":"The Red Cathedral"},"players":{"max":4,"min":2}},"00228959":{"name":{"en":"Alubari","fr":"Alubari"},"players":{"max":5,"min":1}},"00258389":{"name":{"en":"Futuropia","fr":"Futuropia"},"players":{"max":4,"min":1}},"00269511":{"name":{"en":"Cooper Island","fr":"Cooper Island"},"players":{"max":4,"min":2}},"00312484":{"name":{"en":"Lost Ruins of Arnak","fr":"Les Ruines Perdues de Narak"},"players":{"max":4,"min":1}}};
+      document.addEventListener('DOMContentLoaded', function () {
+        if ('serviceWorker' in navigator)
+          navigator.serviceWorker.register('swac.js');
+        $.BGSS.index();
       });
     </script>
   </head>
   <body>
-    <div class="reveal" id="about" data-reveal>
-      <p class="lead">BGSS</p>      
-      <p>version: 1.14</p>
-      <p>date: 2021/05/28</p>
-      <p>source: <a href="https://github.com/corlio/bgss">https://github.com/corlio/bgss</a></p>
-      <button class="close-button" data-close aria-label="Close" type="button">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li><button class="clear button" data-open="about">&quest;</button></li>
-          <li class="top-bar-title" id="title">BoardGame Score Sheet (BGSS)</li>
-        </ul>
+    <!-- navigation bar -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <img src="img/info-square.svg" alt="Info" style="width: 1.5em" data-bs-toggle="modal" data-bs-target="#info">
+        <span class="navbar-text ms-auto me-auto">BoardGame Score Sheet</span>
       </div>
-    </div>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">&nbsp;</div>
-      <!-- language -->
-      <div class="grid-x grid-padding-x">
-        <div class="small-3 cell">
-          <label lang="en" for="language" class="text-right middle">Language</label>
-          <label lang="fr" for="language" class="text-right middle">Langue</label>
-        </div>
-        <div class="small-9 cell">
-          <select id="language">
+    </nav>
+    <!-- main container -->
+    <div class="container">
+      <div class="row mt-2">
+        <label for="language" class="col-3 col-form-label">
+          <span lang="en">Language</span>
+          <span lang="fr">Langue</span>
+        </label>
+        <div class="col-9">
+          <select class="form-select" id="language">
             <option value="en">English</option>
-            <option value="fr">Fran&ccedil;ais</option>
+            <option value="fr">Français</option>
           </select>
         </div>
       </div>
-      <!-- game -->
-      <div class="grid-x grid-padding-x">
-        <div class="small-3 cell">
-          <label lang="en" for="game" class="text-right middle">Game</label>
-          <label lang="fr" for="game" class="text-right middle">Jeu</label>
-        </div>
-        <div class="small-9 cell">
-          <select class="langaware" id="game">
-            <!-- dynamic -->
+      <div lang="en" class="row mt-2">
+        <label for="game-en" class="col-3 col-form-label">Game</label>
+        <div class="col-9">
+          <select class="form-select" id="game-en">
+            <option value="00068448">7 Wonders</option>
+            <option value="00031260">Agricola</option>
+            <option value="00228959">Alubari</option>
+            <option value="00185343">Anachrony</option>
+            <option value="00216132">Clans of Caledonia</option>
+            <option value="00124361">Concordia</option>
+            <option value="00269511">Cooper Island</option>
+            <option value="00258389">Futuropia</option>
+            <option value="00193738">Great Western Trail</option>
+            <option value="00000050">Lost Cities</option>
+            <option value="00312484">Lost Ruins of Arnak</option>
+            <option value="00164928">Orléans</option>
+            <option value="00169786">Scythe</option>
+            <option value="00227224">The Red Cathedral</option>
+            <option value="00215471">Wind the Film!</option>
           </select>
         </div>
       </div>
-      <!-- players -->
-      <div class="grid-x grid-padding-x">
-        <div class="small-3 cell">
-          <label lang="en" for="players" class="text-right middle">Players</label>
-          <label lang="fr" for="players" class="text-right middle">Joueurs</label>
+      <div lang="fr" class="row mt-2">
+        <label for="game-fr" class="col-3 col-form-label">Jeu</label>
+        <div class="col-9">
+          <select class="form-select" id="game-fr">
+            <option value="00068448">7 Wonders</option>
+            <option value="00031260">Agricola</option>
+            <option value="00228959">Alubari</option>
+            <option value="00185343">Anachrony</option>
+            <option value="00216132">Clans of Caledonia</option>
+            <option value="00124361">Concordia</option>
+            <option value="00269511">Cooper Island</option>
+            <option value="00258389">Futuropia</option>
+            <option value="00193738">Great Western</option>
+            <option value="00000050">Les Cités Perdues</option>
+            <option value="00312484">Les Ruines Perdues de Narak</option>
+            <option value="00164928">Orléans</option>
+            <option value="00215471">Photograph</option>
+            <option value="00169786">Scythe</option>
+            <option value="00227224">The Red Cathedral</option>
+          </select>
         </div>
-        <div class="small-9 cell">
-          <select id="players">
+      </div>
+      <div class="row mt-2">
+        <label for="players" class="col-3 col-form-label">
+          <span lang="en">Players</span>
+          <span lang="fr">Joueurs</span>
+        </label>
+        <div class="col-9">
+          <select class="form-select" id="players">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -82,104 +106,102 @@
           </select>
         </div>
       </div>
-      <!-- player 1 name -->
-      <div class="grid-x grid-padding-x" id="div1" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player1" class="text-right middle">Player 1</label>
-          <label lang="fr" for="player1" class="text-right middle">Joueur 1</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player1" list="names" data-index="1">
-        </div>
-      </div>
-      <!-- player 2 name -->
-      <div class="grid-x grid-padding-x" id="div2" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player2" class="text-right middle">Player 2</label>
-          <label lang="fr" for="player2" class="text-right middle">Joueur 2</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player2" list="names" data-index="2">
+      <div class="row mt-2">
+        <label for="player1" class="col-3 col-form-label">
+          <span lang="en">Player 1</span>
+          <span lang="fr">Joueur 1</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="101" id="player1">
         </div>
       </div>
-      <!-- player 3 name -->
-      <div class="grid-x grid-padding-x" id="div3" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player3" class="text-right middle">Player 3</label>
-          <label lang="fr" for="player3" class="text-right middle">Joueur 3</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player3" list="names" data-index="3">
-        </div>
-      </div>
-      <!-- player 4 name -->
-      <div class="grid-x grid-padding-x" id="div4" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player4" class="text-right middle">Player 4</label>
-          <label lang="fr" for="player4" class="text-right middle">Joueur 4</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player4" list="names" data-index="4">
+      <div class="row mt-2">
+        <label for="player2" class="col-3 col-form-label">
+          <span lang="en">Player 2</span>
+          <span lang="fr">Joueur 2</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="102" id="player2">
         </div>
       </div>
-      <!-- player 5 name -->
-      <div class="grid-x grid-padding-x" id="div5" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player5" class="text-right middle">Player 5</label>
-          <label lang="fr" for="player5" class="text-right middle">Joueur 5</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player5" list="names" data-index="5">
-        </div>
-      </div>
-      <!-- player 6 name -->
-      <div class="grid-x grid-padding-x" id="div6" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player6" class="text-right middle">Player 6</label>
-          <label lang="fr" for="player6" class="text-right middle">Joueur 6</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player6" list="names" data-index="6">
+      <div class="row mt-2">
+        <label for="player3" class="col-3 col-form-label">
+          <span lang="en">Player 3</span>
+          <span lang="fr">Joueur 3</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="103" id="player3">
         </div>
       </div>
-      <!-- player 7 name -->
-      <div class="grid-x grid-padding-x" id="div7" style="display: none">
-        <div class="small-3 cell">
-          <label lang="en" for="player7" class="text-right middle">Player 7</label>
-          <label lang="fr" for="player7" class="text-right middle">Joueur 7</label>
-        </div>
-        <div class="small-9 cell">
-          <input type="text" id="player7" list="names" data-index="7">
+      <div class="row mt-2">
+        <label for="player4" class="col-3 col-form-label">
+          <span lang="en">Player 4</span>
+          <span lang="fr">Joueur 4</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="104" id="player4">
         </div>
       </div>
-      <!-- known player names -->
-      <datalist id="names"><!-- dynamic --></datalist>
+      <div class="row mt-2">
+        <label for="player5" class="col-3 col-form-label">
+          <span lang="en">Player 5</span>
+          <span lang="fr">Joueur 5</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="105" id="player5">
+        </div>
+      </div>
+      <div class="row mt-2">
+        <label for="player6" class="col-3 col-form-label">
+          <span lang="en">Player 6</span>
+          <span lang="fr">Joueur 6</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="106" id="player6">
+        </div>
+      </div>
+      <div class="row mt-2">
+        <label for="player7" class="col-3 col-form-label">
+          <span lang="en">Player 7</span>
+          <span lang="fr">Joueur 7</span>
+        </label>
+        <div class="col-9">
+          <input type="text" list="known" class="form-control" data-index="107" id="player7">
+        </div>
+      </div>
       <!-- buttons -->
-      <div class="grid-x grid-padding-x">
-        <div class="small-3 cell">&nbsp;</div>
-        <div class="small-3 small-centered text-center cell">
-          <button type="button" class="button" id="clear">
+      <div class="row mt-2">
+        <div class="col">
+          <button type="button" class="btn btn-primary float-end" id="clear">
             <span lang="en">Clear</span>
             <span lang="fr">Effacer</span>
           </button>
         </div>
-        <div class="small-3 small-centered text-center cell">
-          <button type="button" class="button" id="next">
+        <div class="col">
+          <button type="button" class="btn btn-primary float-begin" id="next">
             <span lang="en">Next</span>
             <span lang="fr">Suivant</span>
           </button>
         </div>
-        <div class="small-3 cell">&nbsp;</div>
       </div>
     </div>
-    <!-- JavaScript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/bgss.min.js"></script>
-    <script>
-      $(document).foundation();
-      $(document).ready(bgss.init_main);
-    </script>
+    <!-- info modal -->
+    <div class="modal" id="info" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Information</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <p>BGSS (BoardGame Score Sheet)</p>
+            <p>Version: 2021/08/26-14:32:19</p>
+            <p>Source: <a href="https://github.com/corlio/bgss">https://github.com/corlio/bgss</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- data list -->
+    <datalist id="known"></datalist>
   </body>
 </html>
